Fixed text wrap issue on blog page

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,7 +10,7 @@
 
 #summary{
   background-color: #22B2B8;
-  height:64vh;
+  height:52vh;
 }
 
 #benefits{
@@ -239,13 +239,3 @@ color: #00BFFF;
 .icons{
   position: absolute;
 }
-
-
-
-
-<<<<<<< Updated upstream
-
-
-}
-=======
->>>>>>> Stashed changes
